tests/runner/src/snapshots/tlang_test_runner__tests__enums_result_javascript@enums__result.tlang.snap
---
source: tests/runner/src/main.rs
description: "Backend: javascript"
expression: "apply_redactions(&output, workspace_root)"
input_file: tests/enums/result.tlang
---
true
false
false
true
10

[stdin]:145
  throw new Error(msg);
  ^

Error: Called unwrap on Err
    at panic ([stdin]:145:9)
    at Result.unwrap$0 [as unwrap] ([stdin]:78:18)
    at [stdin]:343:17
    at runScriptInThisContext (node:internal/vm:218:10)
    at node:internal/process/execution:456:12
    at [stdin]-wrapper:6:24
    at runScriptInContext (node:internal/process/execution:454:60)
    at evalFunction (node:internal/process/execution:286:30)
    at evalTypeScript (node:internal/process/execution:298:3)
    at node:internal/main/eval_stdin:51:5

Node.js v24.0.2
